# docs/swagger.json
@@ -211,6 +211,38 @@
         }
     },
     "definitions": {
+        "models.Attacker": {
+            "type": "object",
+            "properties": {
+                "alliance_id": {
+                    "type": "integer"
+                },
+                "character_id": {
+                    "type": "integer"
+                },
+                "corporation_id": {
+                    "type": "integer"
+                },
+                "damage_done": {
+                    "type": "integer"
+                },
+                "faction_id": {
+                    "type": "integer"
+                },
+                "final_blow": {
+                    "type": "boolean"
+                },
+                "security_status": {
+                    "type": "number"
+                },
+                "ship_type_id": {
+                    "type": "integer"
+                },
+                "weapon_type_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Character": {
             "type": "object",
             "properties": {
@@ -227,9 +259,41 @@
                 }
             }
         },
+        "models.Item": {
+            "type": "object",
+            "properties": {
+                "flag": {
+                    "type": "integer"
+                },
+                "item_type_id": {
+                    "type": "integer"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Item"
+                    }
+                },
+                "quantity_destroyed": {
+                    "type": "integer"
+                },
+                "quantity_dropped": {
+                    "type": "integer"
+                },
+                "singleton": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Kill": {
             "type": "object",
             "properties": {
+                "attackers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Attacker"
+                    }
+                },
                 "awox": {
                     "type": "boolean"
                 },
@@ -271,6 +335,9 @@
                 },
                 "totalValue": {
                     "type": "number"
+                },
+                "victim": {
+                    "$ref": "#/definitions/models.Victim"
                 }
             }
         },
@@ -288,6 +355,52 @@
                     "type": "integer"
                 },
                 "totalPages": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Position": {
+            "type": "object",
+            "properties": {
+                "x": {
+                    "type": "number"
+                },
+                "y": {
+                    "type": "number"
+                },
+                "z": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.Victim": {
+            "type": "object",
+            "properties": {
+                "alliance_id": {
+                    "type": "integer"
+                },
+                "character_id": {
+                    "type": "integer"
+                },
+                "corporation_id": {
+                    "type": "integer"
+                },
+                "damage_taken": {
+                    "type": "integer"
+                },
+                "faction_id": {
+                    "type": "integer"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Item"
+                    }
+                },
+                "position": {
+                    "$ref": "#/definitions/models.Position"
+                },
+                "ship_type_id": {
                     "type": "integer"
                 }
             }
