# src/db/models/constellation.go
@@ -1,0 +1,9 @@
+package models
+
+type Constellation struct {
+	ConstellationID int      `gorm:"primaryKey" json:"constellation_id"`
+	Name            string   `gorm:"type:text" json:"name"`
+	RegionID        int      `gorm:"index" json:"region_id"`
+	Systems         []int    `gorm:"type:jsonb" json:"systems"`
+	Position        Position `gorm:"type:jsonb" json:"position"`
+}
